# WorkSqlFromCPlus

./: .gitignore
projectWithSql/: CMakeLists.txt  projectWithSql.cpp  projectWithSql.h
